# spatial-algorithms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/dslib/: primitives.h
programs/example/: CMakeLists.txt  main.c
programs/point_side/: CMakeLists.txt  point_side.c
